<resources>
    <string name="app_name">SlugSports</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_criteria"> </string>
    <string name="sport_list">Sport List</string>
    <string name="create_text">Create Game</string>
    <string name="available">Available Games</string>
    <string name="title_activity_found_games">FoundGames</string>

    <string name="event_name">Event name:</string>
    <string name="preferred_num">Preferred number of players:</string>
    <string name="description">Additional Info:</string>
    <string name="enter_name">Your name:</string>
    <string name="event_creator">Create Your Event</string>
    <string name="create">Create</string>
    <string name="parseInit">No</string>
    <string name="select_time">Time:</string>
    <string name="show_opers">OPERS Schedule</string>
    <string name="refresh">Refresh</string>

    <string name="join_button">Join</string>
    <string name="view_events">Your Games</string>
    <string name="loading">Waiting for data...</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_page">SplashPage</string>
</resources>
