<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/create_text"
        android:id="@+id/button"
        android:background="@drawable/buttonshape2"
        android:onClick="createEvent"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/listView2"
        android:layout_alignEnd="@+id/listView2"
        android:textColor="#0537ff"
        android:textSize="15sp"
/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <ListView
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button"
        android:layout_above="@+id/button4" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/default_criteria"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/view_events"
        android:id="@+id/button2"
        android:onClick="viewMyEvents"
        android:background="@drawable/buttonshape2"
        android:layout_above="@+id/listView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#0537ff"
        android:textSize="15sp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_opers"
        android:id="@+id/button4"
        android:onClick="showOPERSData"
        android:background="@drawable/buttonshape2"
        android:layout_alignParentBottom="true"
        android:textColor="#FF2605"
        android:textSize="15sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@android:drawable/stat_notify_sync"
        android:background="#23921b"
        android:layout_above="@+id/listView2"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/button"
        android:onClick="parseRefresh" />


</RelativeLayout>

