<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/event_creator"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:textColor="#e90808"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="30dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/enter_name"
                android:id="@+id/textView9"
                android:layout_marginRight="20dp"
                android:textColor="#0367d2"
                android:textStyle="bold"
                android:typeface="serif" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/select_time"
                android:id="@+id/textView10"
                android:layout_marginRight="20dp"
                android:textColor="#0367d2"
                android:textStyle="bold"
                android:typeface="serif" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText10"
                android:focusable="false"
                android:textColor="#0367d2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/event_name"
                android:id="@+id/textView11"
                android:layout_marginRight="20dp"
                android:textColor="#0367d2"
                android:typeface="serif"
                android:textStyle="bold" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/preferred_num"
                android:id="@+id/textView12"
                android:layout_marginRight="20dp"
                android:textColor="#0367d2"
                android:textStyle="bold"
                android:typeface="serif" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/description"
                android:id="@+id/textView13"
                android:layout_marginRight="20dp"
                android:textColor="#0367d2"
                android:typeface="serif"
                android:visibility="visible"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:layout_weight="1" />

        <Button
            android:id="@+id/angry_btn"

            android:text="Enter"
            android:textColor="#FFFF24"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"

            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="buttonPressed" />

    </LinearLayout>
</ScrollView>
